data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2069.wast
;; 9. **Test Description:** Create a loop with a `br_table` whose operand vectors include labels pointing both forward and backward, validating the resolution and correct execution of backward and forward branches.    - **Constraint Checked:** Validates bi-directional branching within loops.    - **Relation to Incorrect Branch Target Resolution:** Incorrect branch directions lead to improper loop execution.

(assert_invalid
  (module (func $bi-directional-br-table
    (loop $loop
      (block $block
        (i32.const 1)
        (br_table $block $loop (i32.const 1))
      )
    )
  ))
  "type mismatch"
)